force-app/main/default/objects/KimbleOne__Invoice__c/KimbleOne__Invoice__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Invoice</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Internal Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>