force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__BusinessUnitTradingEntity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnitTradingEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit Trading Entity</label>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>