force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__CreditedGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditedGrossAmount__c</fullName>
    <label>Credited Gross Amount</label>
    <summarizedField>KimbleOne__CreditNote__c.KimbleOne__GrossAmount__c</summarizedField>
    <summaryFilterItems>
        <field>KimbleOne__CreditNote__c.KimbleOne__ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Approved,Dispatched</value>
    </summaryFilterItems>
    <summaryForeignKey>KimbleOne__CreditNote__c.KimbleOne__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>