force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__ExpensesTaxCodeRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesTaxCodeRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expenses Tax Code Rule</label>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Invoices (Expenses Tax Code Rule)</relationshipLabel>
    <relationshipName>InvoicesExpensesTaxCodeRule</relationshipName>
    <type>Lookup</type>
</CustomField>