force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__GrossAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__GrossAmount__c</fullName>
    <formula>IF( (KimbleOne__InvoiceFormat__r.KimbleOne__RoundingRule__r.KimbleOne__Enum__c = &apos;NetRoundedTaxUnroundedRndDown&apos; || KimbleOne__InvoiceFormat__r.KimbleOne__RoundingRule__r.KimbleOne__Enum__c = &apos;NetRoundedTaxUnroundedRndNr&apos;), KimbleOne__NetAmountRounded__c, ROUND(KimbleOne__NetAmount__c, 2) ) + KimbleOne__TaxAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>