force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__InvoiceContextDescription__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceContextDescription__c</fullName>
    <label>Invoice Context Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>