force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date of invoice / tax date</description>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>