force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__InvoiceDueDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceDueDate__c</fullName>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>