force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__InvoiceTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__CommercialDocumentTemplate__c.KimbleOne__DocumentType__r.KimbleOne__Enum__c</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filterItems>
        <filterItems>
            <field>KimbleOne__CommercialDocumentTemplate__c.KimbleOne__DocumentType__r.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>CommercialDocumentTemplateType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__CommercialDocumentTemplate__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>