force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__IsDownloaded__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsDownloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Downloaded</label>
    <type>Checkbox</type>
</CustomField>