force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__NetAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NetAmount__c</fullName>
    <description>A roll up of the Invoice Line net amount.</description>
    <label>Net Amount</label>
    <summarizedField>KimbleOne__InvoiceLine__c.KimbleOne__NetAmount__c</summarizedField>
    <summaryForeignKey>KimbleOne__InvoiceLine__c.KimbleOne__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>