force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__NetAmountRounded__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NetAmountRounded__c</fullName>
    <label>Net Amount Rounded</label>
    <summarizedField>KimbleOne__InvoiceLine__c.KimbleOne__NetAmountRounded__c</summarizedField>
    <summaryForeignKey>KimbleOne__InvoiceLine__c.KimbleOne__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>