force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__OutboundInterfaceRun__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OutboundInterfaceRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Outbound Interface Run that the Invoice was included on when sent to the external finance system.</description>
    <label>Outbound Interface Run</label>
    <referenceTo>KimbleOne__OutboundInterfaceRun__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>