force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__PaidGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PaidGrossAmount__c</fullName>
    <label>Paid Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>