force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PurchaseOrder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>KimbleOne__PurchaseOrder__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>