force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__ReceivableBankAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReceivableBankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receivable Bank Account</label>
    <referenceTo>KimbleOne__BankAccount__c</referenceTo>
    <relationshipLabel>Invoices (Receivable Bank Account)</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>