force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__ReferenceLink__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReferenceLink__c</fullName>
    <formula>IF(ISBLANK(KimbleOne__CreditNote__c), HYPERLINK(&quot;/?sort=&quot; &amp; KimbleOne__Reference__c, &quot;&quot;, &quot;_self&quot;) &amp; HYPERLINK(&quot;/&quot; &amp; Id, KimbleOne__Reference__c,&quot;_self&quot;), HYPERLINK(&quot;/?sort=&quot; &amp; KimbleOne__Reference__c, &quot;&quot;, &quot;_self&quot;) &amp; HYPERLINK(&quot;/&quot; &amp; KimbleOne__CreditNote__r.Id, KimbleOne__Reference__c,&quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference</label>
    <type>Text</type>
</CustomField>