force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxAmount__c</fullName>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>