force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__TaxAmountSum__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxAmountSum__c</fullName>
    <label>Tax Amount</label>
    <summarizedField>KimbleOne__InvoiceLine__c.KimbleOne__TaxAmount__c</summarizedField>
    <summaryForeignKey>KimbleOne__InvoiceLine__c.KimbleOne__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>