force-app/main/default/objects/KimbleOne__Invoice__c/fields/KimbleOne__WriteOffReasonCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WriteOffReasonCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Write Off Reason</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>WriteOffReasonCode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Invoices (Write Off Reason)</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>