force-app/main/default/objects/KimbleOne__Invoice__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>KimbleOne__ReferenceLink__c</columns>
    <columns>KimbleOne__Account__c</columns>
    <columns>KimbleOne__ApprovalStatus__c</columns>
    <columns>KimbleOne__GrossAmount__c</columns>
    <columns>KimbleOne__InvoiceDate__c</columns>
    <columns>KimbleOne__InvoiceFormat__c</columns>
    <columns>KimbleOne__Reference__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__InvoiceDueDate__c</columns>
    <columns>KimbleOne__InvoiceTemplate__c</columns>
    <columns>KimbleOne__BusinessUnitTradingEntity__c</columns>
    <columns>KimbleOne__TaxCode__c</columns>
    <columns>KimbleOne__TaxRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>